--- a/app/src/main/res/layout/fragment_receipt.xml
+++ b/app/src/main/res/layout/fragment_receipt.xml
@@ -110,7 +110,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:visibility="visible"
+                    android:visibility="invisible"
                     android:drawableTop="@drawable/ic_edit_black_72dp"
                     android:text="@string/receipt_edit"
                     tools:ignore="ButtonStyle" />
